<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.InitialFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_signin"
        android:gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:textColor="@color/colorTextBlack"
        android:text="@string/label_create_gmail_address"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_username"
         android:layout_below="@+id/tv_signin"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:focusableInTouchMode="true"
            android:focusable="true"

            android:digits="@string/digits_for_email_phone"
            android:fontFamily="@font/lato_regular"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>



    <include layout="@layout/layout_next_button"/>


</RelativeLayout>